user profile handlers update
